Page Listing Front & Single Listing...

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ yarn-error.log
 .idea/misc.xml
 .idea/inspectionProfiles/Project_Default.xml
 .idea/modules.xml
+storage/images/big3.png
+storage/images/big00.png
+storage/images/big.png
