--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,19 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^1.0",
+        "guzzlehttp/guzzle": "^7.2",
+        "laravel/dusk": "^5.11",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "paypal/rest-api-sdk-php": "^1.14",
+        "laravelcollective/html": "6.1",
+        "nesbot/carbon": "2.43.0",
         "twilio/sdk": "^6.1"
     },
     "require-dev": {
+        "facade/ignition": "^2.0",
+        "friendsofphp/php-cs-fixer": "^2.16",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
