--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "paypal/rest-api-sdk-php": "^1.14",
          "twilio/sdk": "^6.15"
          "laravelcollective/html": "6.1",
-        "nesbot/carbon": "2.43.0",
+        "nesbot/carbon": "2.43.0"
       },
     "require-dev": {
         "facade/ignition": "^2.0",
