--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "paypal/rest-api-sdk-php": "^1.14",
-         "twilio/sdk": "^6.15",
-         "laravelcollective/html": "6.1"
+         "twilio/sdk": "^6.15"
        },
     "require-dev": {
         "facade/ignition": "^2.0",
