--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,14 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.3.27|^8.0 ",
         "fideloper/proxy": "^4.0",
         "laravel/dusk": "^5.11",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "paypal/rest-api-sdk-php": "^1.14",
         "simplesoftwareio/simple-qrcode": "^4.2",
+        "smsfactor/smsfactor-laravel": "1.0",
         "symfony/translation-contracts": "^1.1.6",
         "twilio/sdk": "^6.15"
     },
@@ -34,8 +35,8 @@
     "extra": {
         "laravel": {
             "dont-discover": [
-            "laravel/dusk"			
-			]
+            "laravel/dusk"          
+            ]
         }
     },
     "autoload": {
@@ -53,7 +54,7 @@
         }
     },
     "minimum-stability": "dev",
-	"prefer-stable": true,
+    "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
@@ -66,5 +67,5 @@
             "@php artisan key:generate --ansi"
         ]
     }
-	
+    
 }
