--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.3.27|^8.0 ",
         "fideloper/proxy": "^4.0",
+        "google/apiclient": "2.2",
         "laravel/dusk": "^5.11",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
