--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "paypal/rest-api-sdk-php": "^1.14",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "smsfactor/smsfactor-laravel": "1.0",
+        "srmklive/paypal": "~1.0",
         "symfony/translation-contracts": "^1.1.6",
         "twilio/sdk": "^6.15"
     },
