--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3.27|^8.0 ",
+        "php": "^7.3.12 ",
         "fideloper/proxy": "^4.0",
         "laravel/dusk": "^5.11",
         "laravel/framework": "5.7.*",
