--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3.12 ",
+        "consoletvs/charts": "6.1.*",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "2.2",
         "laravel/dusk": "^5.11",
